--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/aa5bff96a39368893d74d34b6aa509e0.jpg" alt="logo">
+                    <img src=lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
@@ -50,7 +50,7 @@
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="images/perfil.jpg" alt="perfil">
+                        <img src="perfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
