--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src=lb.jpg" alt="logo">
+                    <img src="lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
