--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
                         <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
                         <div class="btn-meu-curriculo">
-                            <a>
+                            <a href="https://wa.me/5553981184611">
                                 <button><span>Entre em contato</span></button>
                             </a>
                         </div>
