--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <!--GOOGLEFONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>LB</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src="lb.jpg" alt="logo">
+                    <img src="images/lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
@@ -25,8 +26,8 @@
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">Redes</a>
                         <div class="dropdown-content">
-                            <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189">LinkedIn</a>
-                            <a href="https://github.com/Lucasblank1">Github</a>
+                            <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><i class="bi bi-linkedin"></i> LinkedIn</a>
+                            <a href="https://github.com/Lucasblank1"><i class="bi bi-github"></i> Github</a>
                         </div>
                     </li>
                     <li><a href="projetos.html">Meus Projetos</a></li>
@@ -50,11 +51,63 @@
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="perfil.jpg" alt="perfil">
+                        <img src="images/perfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
         </section>
+        <section class="sobre">
+            <div class="interface">
+               <div class="flex">
+                 <div class="img-sobre">
+                    <img src="images/perfil.jpg" alt="foto">
+                 </div>
+                 <div class="txt-sobre">
+                    <h2>Muito prazer, <span>Sou Lucas Blank.</span></h2>
+                    <p>Tenho 27 anos e sou natural de Pelotas-RS, atualmente resido em Palhoça-SC. Estou cursando a 1ª fase de Análise e Desenvolvimento de Sistemas.</p>
+                    <p>Ao longo da minha carreira profissional trabalhei em três áreas diferentes e estou em busca da migração para a quarta área, onde pretendo me estabilizar e focar todos os meus esforços. Além das habilidades específicas necessárias para cada área, desenvolvi algumas habilidades gerais que são de grande valia em todas as áreas.</p>
+                    <p>São elas: O trabalho em equipe, a boa comunicação, a organização e a proatividade. </p>
+                    <p>O intuito desta página é demonstrar algumas habilidades que desenvolvi nas práticas em aula e os aprendizados que busquei de forma autodidata. Entre esses conhecimentos estão: HTML e CSS, demonstrados nos projetos desenvolvidos por mim.</p>
+                    <div class="btn-social">
+                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://github.com/Lucasblank1"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://wa.me/5553981184611"><button><i class="bi bi-whatsapp"></i></button></a>
+                    </div>
+                 </div>
+               </div>
+            </div>
+        </section>
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">FALA<span>COMIGO.</span></h2>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Seu nome completo:" required>
+                    <input type="text" name="" id="" placeholder="Seu e-mail:" required>
+                    <input type="text" name="" id="" placeholder="Seu celular:">
+                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="btn-enviar"><input type="text" class="submit" value="Enviar"></div>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="images/lb.jpg" alt="logo">
+                    </div>
+                    <div class="btn-social">
+                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://github.com/Lucasblank1"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://wa.me/5553981184611"><button><i class="bi bi-whatsapp"></i></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-at"></i> <a href="mailto:Lucasblank1@outlook.com">Lucasblank1@outlook.com</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
