--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/lb.jpg" alt="logo">
+                    <img src="lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
@@ -51,7 +51,7 @@
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="images/perfil.jpg" alt="perfil">
+                        <img src="perfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="interface">
                <div class="flex">
                  <div class="img-sobre">
-                    <img src="images/perfil.jpg" alt="foto">
+                    <img src="perfil.jpg" alt="foto">
                  </div>
                  <div class="txt-sobre">
                     <h2>Muito prazer, <span>Sou Lucas Blank.</span></h2>
@@ -95,7 +95,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/lb.jpg" alt="logo">
+                        <img src="lb.jpg" alt="logo">
                     </div>
                     <div class="btn-social">
                         <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><button><i class="bi bi-linkedin"></i></button></a>
