--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src="lb.jpg" alt="logo">
+                    <img src="images/lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Sobre mim</a></li>
-                    <li><a href="https://lucasblank1.github.io/curriculoatt/">Meu currículo</a></li>
+                    <li><a href="#sobre">Sobre mim</a></li>
+                    <li><a href="https://lucasblank1.github.io/curriculoatt/" target="_blank">Meu currículo</a></li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropbtn">Redes</a>
                         <div class="dropdown-content">
-                            <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><i class="bi bi-linkedin"></i> LinkedIn</a>
-                            <a href="https://github.com/Lucasblank1"><i class="bi bi-github"></i> Github</a>
+                            <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
+                            <a href="https://github.com/Lucasblank1" target="_blank"><i class="bi bi-github"></i> Github</a>
                         </div>
                     </li>
-                    <li><a href="projetos.html">Meus Projetos</a></li>
+                    <li><a href="projetos.html" target="_blank">Meus Projetos</a></li>
                 </ul>
             </nav>
         </div>    
@@ -44,23 +44,23 @@
                         <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
                         <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
                         <div class="btn-meu-curriculo">
-                            <a href="https://wa.me/5553981184611">
+                            <a href="https://wa.me/5553981184611" target="_blank">
                                 <button><span>Entre em contato</span></button>
                             </a>
                         </div>
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="perfil.jpg" alt="perfil">
+                        <img src="images/perfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <div class="interface">
                <div class="flex">
                  <div class="img-sobre">
-                    <img src="perfil.jpg" alt="foto">
+                    <img src="images/perfil.jpg" alt="foto">
                  </div>
                  <div class="txt-sobre">
                     <h2>Muito prazer, <span>Sou Lucas Blank.</span></h2>
@@ -69,9 +69,9 @@
                     <p>São elas: O trabalho em equipe, a boa comunicação, a organização e a proatividade. </p>
                     <p>O intuito desta página é demonstrar algumas habilidades que desenvolvi nas práticas em aula e os aprendizados que busquei de forma autodidata. Entre esses conhecimentos estão: HTML e CSS, demonstrados nos projetos desenvolvidos por mim.</p>
                     <div class="btn-social">
-                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><button><i class="bi bi-linkedin"></i></button></a>
-                        <a href="https://github.com/Lucasblank1"><button><i class="bi bi-github"></i></button></a>
-                        <a href="https://wa.me/5553981184611"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://github.com/Lucasblank1" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://wa.me/5553981184611" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
                     </div>
                  </div>
                </div>
@@ -95,12 +95,12 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="lb.jpg" alt="logo">
+                        <img src="images/lb.jpg" alt="logo">
                     </div>
                     <div class="btn-social">
-                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189"><button><i class="bi bi-linkedin"></i></button></a>
-                        <a href="https://github.com/Lucasblank1"><button><i class="bi bi-github"></i></button></a>
-                        <a href="https://wa.me/5553981184611"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://github.com/Lucasblank1" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://wa.me/5553981184611" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
                     </div>
                 </div>
             </div>
