--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/lb.jpg" alt="logo">
+                    <img src="lb.jpg" alt="logo">
                 </a>
             </div><!--Logo-->
             <nav class="menu-desktop">
@@ -51,7 +51,7 @@
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="images/perfil.jpg" alt="perfil">
+                        <img src="perfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
@@ -82,10 +82,10 @@
                 <h2 class="titulo">FALA<span>COMIGO.</span></h2>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Seu nome completo:" required>
-                    <input type="text" name="" id="" placeholder="Seu e-mail:" required>
+                    <input type="email" name="" id="" placeholder="Seu e-mail:" required>
                     <input type="text" name="" id="" placeholder="Seu celular:">
                     <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
-                    <div class="btn-enviar"><input type="text" class="submit" value="Enviar"></div>
+                    <div class="btn-enviar"><input type="submit" class="submit" value="Enviar"></div>
                 </form>
             </div>
         </section>
