--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             <div class="interface">
                <div class="flex">
                  <div class="img-sobre">
-                    <img src="images/perfil.jpg" alt="foto">
+                    <img src="perfil.jpg" alt="foto">
                  </div>
                  <div class="txt-sobre">
                     <h2>Muito prazer, <span>Sou Lucas Blank.</span></h2>
-                    <p>Tenho 27 anos e sou natural de Pelotas-RS, atualmente resido em Palhoça-SC. Estou cursando a 1ª fase de Análise e Desenvolvimento de Sistemas.</p>
+                    <p>Tenho 27 anos e sou natural de Pelotas-RS, atualmente resido em Palhoça-SC. Estou cursando a 2ª fase de Análise e Desenvolvimento de Sistemas.</p>
                     <p>Ao longo da minha carreira profissional trabalhei em três áreas diferentes e estou em busca da migração para a quarta área, onde pretendo me estabilizar e focar todos os meus esforços. Além das habilidades específicas necessárias para cada área, desenvolvi algumas habilidades gerais que são de grande valia em todas as áreas.</p>
                     <p>São elas: O trabalho em equipe, a boa comunicação, a organização e a proatividade. </p>
                     <p>O intuito desta página é demonstrar algumas habilidades que desenvolvi nas práticas em aula e os aprendizados que busquei de forma autodidata. Entre esses conhecimentos estão: HTML e CSS, demonstrados nos projetos desenvolvidos por mim.</p>
@@ -95,7 +95,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/lb.jpg" alt="logo">
+                        <img src="lb.jpg" alt="logo">
                     </div>
                     <div class="btn-social">
                         <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
