--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
                     <p>Tenho 27 anos e sou natural de Pelotas-RS, atualmente resido em Palhoça-SC. Estou cursando a 2ª fase de Análise e Desenvolvimento de Sistemas.</p>
                     <p>Ao longo da minha carreira profissional trabalhei em três áreas diferentes e estou em busca da migração para a quarta área, onde pretendo me estabilizar e focar todos os meus esforços. Além das habilidades específicas necessárias para cada área, desenvolvi algumas habilidades gerais que são de grande valia em todas as áreas.</p>
                     <p>São elas: O trabalho em equipe, a boa comunicação, a organização e a proatividade. </p>
-                    <p>O intuito desta página é demonstrar algumas habilidades que desenvolvi nas práticas em aula e os aprendizados que busquei de forma autodidata. Entre esses conhecimentos estão: HTML e CSS, demonstrados nos projetos desenvolvidos por mim.</p>
+                   
+                        <p>Tenho experiência em desenvolvimento web utilizando tecnologias como HTML, CSS e JavaScript para construir interfaces dinâmicas. Trabalho com PHP e Python no backend e utilizo SQL para gerenciamento de banco de dados.</p>
+                        <div class="icones-linguagens">
+                            <img src="https://img.icons8.com/color/48/html-5--v1.png" alt="HTML">
+                            <img src="https://img.icons8.com/stickers/100/css3.png" alt="CSS">
+                            <img src="https://img.icons8.com/color/48/javascript--v1.png" alt="JavaScript">
+                            <img src="https://img.icons8.com/nolan/64/php-elephant.png" alt="PHP">
+                            <img src="https://img.icons8.com/fluency/48/python.png" alt="Python">
+                            <img src="https://img.icons8.com/fluency/48/mysql-logo.png" alt="SQL">
+                        </div>                    
                     <div class="btn-social">
+                        <h3>Minhas Redes:</h3>
                         <a href="https://linkedin.com/in/lucas-da-cruz-blank-9110b1189" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                         <a href="https://github.com/Lucasblank1" target="_blank"><button><i class="bi bi-github"></i></button></a>
                         <a href="https://wa.me/5553981184611" target="_blank"><button><i class="bi bi-whatsapp"></i></button></a>
