--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     
                     <div class="img-topo-site">
-                        <img src="perfil.jpg" alt="perfil">
+                        <img src="fotoperfil.jpg" alt="perfil">
                     </div>
                 </div>
             </div>
