--- a/index.html
+++ b/index.html
@@ -75,12 +75,17 @@
                     <img src="assets/selfie.jpeg" alt="foto">
                  </div>
                  <div  id="sobre" class="txt-sobre">
-                    <h2>Muito prazer, <span>Sou Lucas Blank.</span></h2>
-                    <p>Tenho 27 anos e sou natural de Pelotas-RS, atualmente resido em Palhoça-SC. Estou cursando a 2ª fase de Análise e Desenvolvimento de Sistemas.</p>
-                    <p>Ao longo da minha carreira profissional trabalhei em três áreas diferentes e estou em busca da migração para a quarta área, onde pretendo me estabilizar e focar todos os meus esforços. Além das habilidades específicas necessárias para cada área, desenvolvi algumas habilidades gerais que são de grande valia em todas as áreas.</p>
-                    <p>São elas: O trabalho em equipe, a boa comunicação, a organização e a proatividade. </p>
-                   
-                        <p>Tenho experiência em desenvolvimento web utilizando tecnologias como HTML, CSS e JavaScript para construir interfaces dinâmicas. Trabalho com PHP e Python no backend e utilizo SQL para gerenciamento de banco de dados.</p>
+                    <h2>Muito prazer, <span>sou Lucas Blank.</span></h2>
+
+<p>Tenho 27 anos, sou natural de Pelotas-RS e atualmente resido em Palhoça-SC. Estou cursando a 4ª fase de Análise e Desenvolvimento de Sistemas, com foco em desenvolvimento Full Stack e em constante evolução técnica para atuação como Desenvolvedor Júnior.</p>
+
+<p>Ao longo da minha trajetória profissional, atuei em diferentes áreas, o que contribuiu para o desenvolvimento de responsabilidade, organização e uma boa visão de processos. Atualmente, estou em transição definitiva para a área de tecnologia, onde concentro meus esforços na consolidação da minha carreira como desenvolvedor.</p>
+
+<p>Possuo experiência em desenvolvimento web utilizando HTML, CSS e JavaScript para a criação de interfaces funcionais, responsivas e bem estruturadas. Atuo no backend com PHP, Python e JavaScript, aplicando lógica de programação, boas práticas e integração com bancos de dados SQL.</p>
+
+<p>Durante minha formação, atuei como Desenvolvedor Full Stack em um projeto acadêmico open-source, no qual participei ativamente de todas as etapas do desenvolvimento de uma ferramenta web para geração automática de diagramas de banco de dados a partir de comandos SQL. Essa experiência proporcionou uma visão prática do ciclo completo de uma aplicação, desde a concepção da interface até a implementação de regras de negócio, integração entre frontend e backend e deploy.</p>
+
+
                         <div class="icones-linguagens">
                             <img src="https://img.icons8.com/color/48/html-5--v1.png" alt="HTML">
                             <img src="https://img.icons8.com/stickers/100/css3.png" alt="CSS">
