Adição de projeto e correção no menu dropdown
Foi adicionado um projeto na página de projetos.
Correção que resolve problema no z-index e margin-top do menu dropdown que fazia com que ele sumisse rapidamente.

--- a/projetos.html
+++ b/projetos.html
@@ -235,20 +235,20 @@
             
             <!-- Projeto 3 - Placeholder -->
             <div class="projeto-card">
-                <span class="status-badge status-andamento">Em Desenvolvimento</span>
+                <span class="status-badge status-concluido">Concluído</span>
                 <div class="projeto-icon">
                     <i class="bi bi-code-square"></i>
                 </div>
-                <h3>Sistema Web</h3>
-                <p>Aplicação web completa com backend em PHP e banco de dados SQL, focada em gerenciamento de dados.</p>
+                <h3>BrDiagrama</h3>
+                <p>Ferramenta web open-source para geração automática de diagramas de banco de dados a partir de comandos SQL.</p>
                 <div class="projeto-tags">
-                    <span class="tag">PHP</span>
-                    <span class="tag">MySQL</span>
                     <span class="tag">JavaScript</span>
+                    <span class="tag">Vue3.js</span>
+                    <span class="tag">Canvas API</span>
                 </div>
-                <div class="projeto-links">
-                    <a href="#" class="projeto-btn" style="opacity: 0.6; cursor: not-allowed;">
-                        <i class="bi bi-hourglass-split"></i> Em breve
+               <div class="projeto-links">
+                    <a href="https://github.com/brdiagrama" target="_blank" class="projeto-btn">
+                        <i class="bi bi-eye"></i> Ver Projeto
                     </a>
                 </div>
             </div>
